# organizador-arquivos-ext

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  Makefile  QUICKSTART.md  README.md  READY_TO_DEPLOY.md  __init__.py  app.py  gui.py  mapping_example.json  pyproject.toml  requirements.txt  setup.cfg
