[metadata]
name = organizador-arquivos-ext
version = 0.1.0
author = Seu Nome
author_email = seu.email@example.com
description = Organizador simples de arquivos por extensão ou tipo de mídia
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seuusuario/organizador-arquivos-ext
project_urls =
    Bug Tracker = https://github.com/seuusuario/organizador-arquivos-ext/issues
    Source Code = https://github.com/seuusuario/organizador-arquivos-ext
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: Portuguese (Brazilian)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Utilities

[options]
py_modules = app
python_requires = >=3.8
install_requires =

[options.entry_points]
console_scripts =
    organizador = app:main

[bdist_wheel]
universal = False
